# Medical-Personnel-Registration-Change-Generator

./: .gitignore  Cargo.toml  README.md  fonts.css  index.html  manifest.json  package-lock.json  package.json  playwright.config.js  server.js  style.css  sw.js
.github/workflows/: gh-pages.yml
src/: main.rs
