[package]
name = "medical-personnel-registration-change-generator"
version = "1.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Navigator",
    "Window",
    "Document",
    "Storage",
    "HtmlInputElement",
    "KeyboardEvent",
    "MouseEvent",
    "ClipboardEvent",
    "Element",
    "DomRect",
    "HtmlElement"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
gloo-timers = "0.3"
gloo-utils = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
